<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/destinationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/destination_label_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/destinationPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="postalAddress"
        android:hint="@string/destination_path_hint"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/destinationYearSubfolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/destination_year_subfolder" />

    <EditText
        android:id="@+id/destinationPattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/destination_pattern_hint"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/destination_pattern_help"
        android:textSize="11sp" />
</LinearLayout>
